Fixes missing background for secret

--- a/webofneeds/won-owner-webapp/src/main/webapp/style/_atom-card.scss
+++ b/webofneeds/won-owner-webapp/src/main/webapp/style/_atom-card.scss
@@ -161,6 +161,7 @@ won-atom-card {
 
       border-radius: 100%;
       @include fixed-square(var(--persona-height));
+      background: white;
     }
 
     &__name {
